working on owl carousel

--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700,900");
 
-@import "css/bootstrap.min.css";
-@import "css/owl.carousel.min.css";
+@import "css/bootstrap.css";
+@import "css/owl.carousel.css";
 @import "css/animate.css";
 @import "css/magnific-popup.css";
 @import "css/font-awesome.min.css";
