stae files for homepage

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@
 
 @import "css/bootstrap.css";
 @import "css/owl.carousel.css";
+@import "css/owl.theme.default.css";
 @import "css/animate.css";
 @import "css/magnific-popup.css";
 @import "css/font-awesome.min.css";
